# service_text_classification

./: .gitignore  README.md  app.py  pyproject.toml  setup.py
data/interim/: test_set.csv
notebooks/: analysis.ipynb
src/data/: encode_data.py  fix_balance.py  make_dataset.py  preprocessing.py  split_data.py  vectorizer.py
src/features/: build_features.py
src/models/: inference.py  train_model.py
src/visualization/: visualize.py
