[tool.poetry]
name = "text-class"
version = "0.1.0"
description = ""
authors = ["Nikita Anufriev"]
readme = "README.md"
packages = [{include = "text_class"}]

[tool.poetry.dependencies]
python = ">=3.7, >=3.8, >=3.9, <=3.11.4"
pandas = "^2.0.3"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
transformers = "^4.32.0"
tensorflow = "^2.13.0"
nltk = "^3.8.1"
imblearn = "^0.0"
emoji = "^2.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
