[tool.poetry]
name = "class-env"
version = "0.1.0"
description = ""
authors = ["nfrvnikita <nfrv.nikita@gmail.com>"]
readme = "README.md"
packages = [{include = "class_env"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
numpy = "^1.25.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
transformers = "^4.32.0"
imblearn = "^0.0"
tqdm = "^4.66.1"
ipywidgets = "^8.1.0"
streamlit = "^1.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
